--- a/BlowFish.csproj
+++ b/BlowFish.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp2.1;netstandard2.0;net452;net462;net47;net472</TargetFrameworks>
+		<TargetFrameworks>netcoreap3.0;netcoreapp2.2;netcoreapp2.1;netstandard2.0;net452;net462;net47;net472</TargetFrameworks>
 		<AssemblyName>BlowFish</AssemblyName>
 		<LangVersion>latest</LangVersion>
 		<Company>Els_kom org.</Company>
@@ -13,8 +13,8 @@
 		<PackageLicenseUrl>https://github.com/Elskom/BlowFish/blob/master/LICENSE</PackageLicenseUrl>
 		<Copyright>Copyright (c) 2018</Copyright>
 		<Description>A simple C# blowfish encryption library.</Description>
-		<PackageReleaseNotes>Initial release.</PackageReleaseNotes>
-		<Version>1.0.0</Version>
+		<PackageReleaseNotes>Added .NET Core 3.0 and 2.2 to target frameworks.</PackageReleaseNotes>
+		<Version>1.0.1</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
