--- a/BlowFish.csproj
+++ b/BlowFish.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreap3.0;netcoreapp2.2;netcoreapp2.1;netstandard2.0;net452;net462;net47;net472</TargetFrameworks>
+		<TargetFrameworks>netcoreapp3.0;netcoreapp2.2;netcoreapp2.1;netstandard2.0;net452;net462;net47;net472</TargetFrameworks>
 		<AssemblyName>BlowFish</AssemblyName>
 		<LangVersion>latest</LangVersion>
 		<Company>Els_kom org.</Company>
